Java changes